--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,178 +1,230 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Secure Notes - Groupe 9</title>
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="default-src 'self'; 
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; 
                script-src 'self' https://cdn.jsdelivr.net 'unsafe-inline'; 
                style-src 'self' https://cdn.jsdelivr.net 'unsafe-inline'; 
                img-src 'self' data:;
-               connect-src 'self' http://localhost:8080 https://cdn.jsdelivr.net;"
-    />
+               connect-src 'self' http://localhost:8080 https://cdn.jsdelivr.net;" />
     <style>
-      /* Quelques ajustements pour cacher les vues non actives */
-      .view-section {
-        display: none;
-      }
-      .active-view {
-        display: block;
-      }
-      .loading-overlay {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(255, 255, 255, 0.8);
-        z-index: 9999;
-        display: none;
-        justify-content: center;
-        align-items: center;
-      }
+        /* Quelques ajustements pour cacher les vues non actives */
+        .view-section {
+            display: none;
+        }
+
+        .active-view {
+            display: block;
+        }
+
+        .loading-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(255, 255, 255, 0.8);
+            z-index: 9999;
+            display: none;
+            justify-content: center;
+            align-items: center;
+        }
     </style>
-  </head>
-  <body class="bg-light">
+</head>
+
+<body class="bg-light">
     <div id="loading" class="loading-overlay">
-      <div class="spinner-border text-primary" role="status">
-        <span class="visually-hidden">Chargement...</span>
-      </div>
+        <div class="spinner-border text-primary" role="status">
+            <span class="visually-hidden">Chargement...</span>
+        </div>
     </div>
 
     <div class="container mt-5">
-      <div id="view-login" class="view-section active-view">
-        <div class="row justify-content-center">
-          <div class="col-md-6 col-lg-4">
-            <div class="card shadow">
-              <div class="card-body">
-                <h3 class="text-center mb-4">Connexion</h3>
-                <div id="login-error" class="alert alert-danger d-none"></div>
-                <form id="login-form">
-                  <div class="mb-3">
-                    <label for="username" class="form-label">Utilisateur</label>
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="username"
-                      required
-                    />
-                  </div>
-                  <div class="mb-3">
-                    <label for="password" class="form-label"
-                      >Mot de passe</label
-                    >
-                    <input
-                      type="password"
-                      class="form-control"
-                      id="password"
-                      required
-                    />
-                  </div>
-                  <button type="submit" class="btn btn-primary w-100">
-                    Se connecter
-                  </button>
-                </form>
-              </div>
+        <div id="view-auth" class="view-section active-view">
+            <div class="row justify-content-center align-items-stretch">
+                <div class="col-md-6 col-lg-4">
+                    <div class="card shadow">
+                        <div class="card-body">
+                            <h3 class="text-center mb-4">Connexion</h3>
+                            <div id="login-error" class="alert alert-danger d-none"></div>
+                            <form id="login-form">
+                                <div class="mb-3">
+                                    <label for="username" class="form-label">Utilisateur</label>
+                                    <input type="text" class="form-control" id="username" required />
+                                </div>
+                                <div class="mb-3">
+                                    <label for="password" class="form-label">Mot de passe</label>
+                                    <input type="password" class="form-control" id="password" required />
+                                </div>
+                                <button type="submit" class="btn btn-primary w-100">
+                                    Se connecter
+                                </button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-auto d-none d-md-flex align-items-center">
+                    <div class="vr" style="width: 1px; height: 80%; opacity: 0.2;"></div>
+                </div>
+
+                <div class="col-md-6 col-lg-4">
+                    <div class="card shadow">
+                        <div class="card-body">
+                            <h3 class="text-center mb-4">Enregistrement</h3>
+                            <div id="register-error" class="alert alert-danger d-none"></div>
+                            <form id="register-form">
+                                <div class="mb-3">
+                                    <label for="username" class="form-label">Utilisateur</label>
+                                    <input type="text" class="form-control" id="username-register" required />
+                                </div>
+                                <div class="mb-3">
+                                    <label for="password" class="form-label">Mot de passe</label>
+                                    <input type="password" class="form-control" id="password-register" required />
+                                </div>
+                                <div class="mb-3">
+                                    <label for="email" class="form-label">Email</label>
+                                    <input type="email" class="form-control" id="email-register" required />
+                                </div>
+                                <button type="submit" class="btn btn-primary w-100">
+                                    S'inscrire
+                                </button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-      </div>
-
-      <div id="view-dashboard" class="view-section">
-        <nav class="navbar navbar-light bg-white rounded shadow-sm mb-4 px-3">
-          <span class="navbar-brand mb-0 h1">Mes Notes Sécurisées</span>
-          <button id="btn-logout" class="btn btn-outline-danger btn-sm">
-            Déconnexion
-          </button>
-        </nav>
-
-        <div class="d-flex justify-content-between align-items-center mb-3">
-          <h4>Vos documents</h4>
-          <button id="btn-new-note" class="btn btn-success">
-            + Nouvelle Note
-          </button>
         </div>
 
-        <div id="notes-list" class="row">
-          <p class="text-muted text-center">Chargement des notes...</p>
-        </div>
-      </div>
-
-      <div id="view-editor" class="view-section">
-        <div class="card shadow">
-          <div
-            class="card-header d-flex justify-content-between align-items-center"
-          >
-            <button id="btn-back" class="btn btn-secondary btn-sm">
-              &larr; Retour
-            </button>
-            <span id="lock-status" class="badge bg-success">Mode Écriture</span>
-          </div>
-          <div class="card-body">
-            <div id="editor-alert" class="alert alert-warning d-none"></div>
-
-            <form id="note-form">
-              <input type="hidden" id="note-id" />
-
-              <div class="mb-3">
-                <label class="form-label">Titre</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="note-title"
-                  required
-                />
-              </div>
-
-              <div class="mb-3">
-                <label class="form-label">Contenu</label>
-                <textarea
-                  class="form-control"
-                  id="note-content"
-                  rows="10"
-                  required
-                ></textarea>
-              </div>
-
-              <div class="mb-3">
-                <label class="form-label text-muted"
-                  >Prévisualisation sécurisée (Lecture seule)</label
-                >
-                <div
-                  id="note-preview"
-                  class="border p-3 bg-light rounded"
-                  style="min-height: 100px"
-                ></div>
-              </div>
-
-              <div class="d-flex justify-content-end">
-                <button
-                  type="button"
-                  id="btn-share"
-                  class="btn btn-info me-2 text-white"
-                >
-                  Partager
+        <div id="view-dashboard" class="view-section">
+            <nav class="navbar navbar-light bg-white rounded shadow-sm mb-4 px-3">
+                <span class="navbar-brand mb-0 h1">Mes Notes Sécurisées</span>
+                <div>
+                    <span id="current-user" class="navbar-brand mb-0 h1"></span>
+                    <span id="current-user-id" class="mb-0 text-muted"></span>
+                    <style>
+                        #current-user-id {
+                            font-size: x-small;
+                        }
+                    </style>
+                </div>
+                <button id="btn-logout" class="btn btn-outline-danger btn-sm">
+                    Déconnexion
                 </button>
-                <button type="submit" id="btn-save" class="btn btn-primary">
-                  Sauvegarder
+            </nav>
+
+            <div class="d-flex justify-content-between align-items-center mb-3">
+                <h4>Vos documents</h4>
+                <button id="btn-new-note" class="btn btn-success">
+                    + Nouvelle Note
                 </button>
-              </div>
-            </form>
-          </div>
+            </div>
+
+            <div id="notes-list" class="row">
+                <p class="text-muted text-center">Chargement des notes...</p>
+            </div>
         </div>
-      </div>
+
+        <div id="view-editor" class="view-section">
+            <div class="card shadow">
+                <div class="card-header d-flex justify-content-between align-items-center">
+                    <button id="btn-back" class="btn btn-secondary btn-sm">
+                        &larr; Retour
+                    </button>
+                    <span id="lock-status" class="badge bg-success">Mode Écriture</span>
+                </div>
+                <div class="card-body">
+                    <div id="editor-alert" class="alert alert-warning d-none"></div>
+
+                    <form id="note-form">
+                        <input type="hidden" id="note-id" />
+
+                        <div class="mb-3">
+                            <label class="form-label">Titre</label>
+                            <input type="text" class="form-control" id="note-title" required />
+                        </div>
+
+                        <div class="mb-3">
+                            <label class="form-label">Contenu</label>
+                            <textarea class="form-control" id="note-content" rows="10" required></textarea>
+                        </div>
+
+                        <div class="mb-3">
+                            <label class="form-label text-muted">Prévisualisation sécurisée (Lecture seule)</label>
+                            <div id="note-preview" class="border p-3 bg-light rounded" style="min-height: 100px"></div>
+                        </div>
+
+                        <div class="d-flex justify-content-end">
+                            <button type="button" id="btn-share" class="btn btn-info me-2 text-white">
+                                Partager
+                            </button>
+                            <button type="submit" id="btn-save" class="btn btn-primary">
+                                Sauvegarder
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <style>
+        .custom-modal-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            display: none;
+            z-index: 1050;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .custom-modal-content {
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            width: 100%;
+            max-width: 500px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+        }
+
+        .show-modal {
+            display: flex !important;
+        }
+    </style>
+
+    <div id="share-modal-overlay" class="custom-modal-overlay">
+        <div class="custom-modal-content">
+            <div class="d-flex justify-content-between align-items-center mb-3">
+                <h5 class="mb-0">Partager la note</h5>
+                <button type="button" class="btn-close" id="btn-close-share"></button>
+            </div>
+            <div class="modal-body">
+                <div class="input-group mb-3">
+                    <input type="text" id="share-target-user" class="form-control" placeholder="ID Utilisateur">
+                    <select id="share-permission" class="form-select" style="max-width: 140px;">
+                        <option value="READ_ONLY">Lecture seule</option>
+                        <option value="READ_WRITE">Édition</option>
+                    </select>
+                    <button class="btn btn-primary" id="btn-confirm-share">Ajouter</button>
+                </div>
+                <h6>Accès actuels :</h6>
+                <ul id="share-list" class="list-group" style="max-height: 200px; overflow-y: auto;"></ul>
+            </div>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.6/dist/purify.min.js"></script>
 
     <script src="app.js"></script>
-  </body>
+</body>
+
 </html>
